<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/colorPrimary"
        android:scrollbars="horizontal">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="32dp"

            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="32dp"
                app:srcCompat="@mipmap/censusw" />

            <EditText
                android:id="@+id/phoneNumField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:text="708"
                android:inputType="phone"
                android:textColor="@color/colorAccent"/>

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:text="pass"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent" />


            <CheckBox
                android:id="@+id/rememberCheck"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:text="@string/remember_check"
                android:textColor="@color/colorAccent"/>

            <FrameLayout
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/login_btn"
                android:clickable="true"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:foreground="?selectableItemBackground"
                android:onClick="login">

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:text="@string/login_button"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />


            </FrameLayout>

        </LinearLayout>

        <View
            android:id="@+id/revealView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:visibility="invisible"/>

    </RelativeLayout>
</layout>